--- a/redmine_dmsf/assets/stylesheets/plupload/jquery.ui.plupload.css
+++ b/redmine_dmsf/assets/stylesheets/plupload/jquery.ui.plupload.css
@@ -20,14 +20,14 @@ div.plupload div.plupload_header {border-width: 0 0 1px 0; position: relative;}
 }
 
 .plupload_header_content {
-	background-image: url('../../images/plupload/plupload-bw.png');
+	background-image: url('../img/plupload.png');
 	background-repeat: no-repeat;
 	background-position: 8px center;
 	min-height: 56px;
 	padding-left: 60px;
 	position:relative;
 }
-.plupload_header_content_bw {background-image: url('../../images/plupload/plupload-bw.png');}
+.plupload_header_content_bw {background-image: url('../img/plupload-bw.png');}
 .plupload_header_title {
 	font: normal 18px sans-serif;
 	padding: 6px 0 3px;
@@ -50,6 +50,7 @@ div.plupload div.plupload_header {border-width: 0 0 1px 0; position: relative;}
 }
 
 .plupload_scroll {
+	max-height: 180px;
 	min-height: 168px;
 	_height: 168px;
 	overflow-y: auto;
