* plupload tuned * upload controls set according to settings * added setting for max number of uploaded files at once * incremented version info
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_0.6.0@21 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/settings/_dmsf_settings.erb
+++ b/redmine_dmsf/app/views/settings/_dmsf_settings.erb
@@ -1,4 +1,12 @@
 <p>
+  <%=content_tag(:label, "Maximum files upload:") %>
+  <%=text_field_tag "settings[dmsf_max_file_upload]", @settings["dmsf_max_file_upload"], :size=>10 %><br/>
+  (<%=l(:label_default)%>: 0)
+  <br/>
+  Limits maximum number of files uploaded at once. "0" means unlimited.
+</p>
+
+<p>
   <%=content_tag(:label, "Maximum files download:") %>
   <%=text_field_tag "settings[dmsf_max_file_download]", @settings["dmsf_max_file_download"], :size=>10 %><br/>
   (<%=l(:label_default)%>: 0)
