--- a/redmine_dmsf/app/views/dmsf_detail/_upload_file_locked.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/_upload_file_locked.html.erb
@@ -1,5 +1,6 @@
 <div class="box dmsf_upload">
 	<%= hidden_field_tag("commited_files[#{i}][disk_filename]", upload.disk_filename) %>
+	<%= hidden_field_tag("commited_files[#{i}][name]", upload.name) %>
 	<fieldset class="tabular">
 		<legend><%= h(upload.name) %></legend>
 		<p class="warning">File locked!</p>
