--- a/redmine_dmsf/app/views/dmsf_mailer/files_updated.text.plain.rhtml
+++ b/redmine_dmsf/app/views/dmsf_mailer/files_updated.text.plain.rhtml
@@ -1,7 +1,7 @@
-User <%= @user %> actualized following files in project <%= @project.name %>:
+User <%= @user %> actualized DMSF files in project <%= @project.name %>:
 <% @files.each do |file| %>
-	<%= file.dmsf_path_str %> (<%= number_to_human_size(file.last_revision.size) %>), version: <%= file.last_revision.major_version %>.<%= file.last_revision.minor_version %>
+	<%= file.dmsf_path_str %>, <%= number_to_human_size(file.last_revision.size) %>, version: <%= file.last_revision.major_version %>.<%= file.last_revision.minor_version %><%= ", #{file.last_revision.workflow_str}" unless file.last_revision.workflow_str.blank? %>
 	<%= url_for({:only_path => false, :controller => "dmsf_detail", :action => "file_detail", :id => file.project,
 		:file_id => file }) %>
-	
+	<% unless file.last_revision.comment.blank? %>    comment: <%= file.last_revision.comment %><% end %>
 <% end %>
