--- a/redmine_dmsf/app/views/dmsf/_path.html.erb
+++ b/redmine_dmsf/app/views/dmsf/_path.html.erb
@@ -3,7 +3,6 @@
  / 
  <%= link_to(h(path_element.name), {:controller => "dmsf", :action => "index", :id=> @project, :folder_id => path_element}) %>
  <% if path_element.notification %>
-	<%= image_tag("notify.png", :plugin => "redmine_dmsf", :alt => "Not. act.",
-		:title => "Notifications active") %>
+	<%= image_tag("notify.png", :plugin => "redmine_dmsf", :title => l(:title_notifications_active)) %>
  <% end %>
 <% end %>
